@@ -73,6 +73,7 @@
 #include <stdio.h>
 #include <stdlib.h>
 #include <unistd.h>
+#include <errno.h>
 
 #ifdef CURSES
 #include <curses.h>
